
2010-05-03
	* cachesystem.c: bug fixed - two new checks for wrong format in cache config files.
		They caused 'asserts' to fail. Now they produce 'fatals'.
	* moesi.c, mmu.c: code fixed to allow for a system with no caches using only
		main memory and no interconnect.

2010-05-04
	* syscall.c: system call 'futex': support for cmd = FUTEX_WAKE_BITSET and
		FUTEX_WAIT_BITSET.

2010-05-05
	* elf.c: error messages updated to be more explicit. The error message obtained
		when trying to execute 64-bit binaries is specific.

2010-06-15
	* processor.c: bug fixed - stats Commit.squashed were showing the same
		results as Commit.mispred.
	* m2s.h: '-phregs_size' and '-phregs_kind' options and variables changed to
		'-rf_size' and 'rf_kind'.
	* processor.c: pipeline statistics for McPAT.
	* cachesystem.c: statistics for McPAT.

2010-06-16
	* phregs.c: function 'phregs_can_rename' substituted by 'phregs_count_deps'.
		This function is called when the uop is created, and stores the
		number of required logical/physical ideps/odeps.
	* cachesystem.c: TLB split into Data-TLB and Inst-TLB for compatibility with
		McPAT.
	* processor.c: call to 'uopq_reg_options()' was missing.

2010-06-16
	Version 2.3.2 Released

2010-06-18
	* elf.c: warnings produced by 'sizeof' removed.

2010-06-23
	* m2skernel: multi-byte nops implemented. Instruction 'cpuid' with eax=2.
		PrefetchXX instructions implemented. (All reported by Multi2Sim user).

2010-07-21
	* m2skernel, sched.c: context scheduler implemented. New fields:
		ke->context_reschedule
		ctx->alloc_when, ctx->dealloc_when
		ctx->alloc_core, ctx->alloc_thread
		ctx->dealloc_signal
		p->ctx_alloc_oldest
		p->ctx_dealloc_signals

2010-07-21
	Version 2.3.3 Released

2010-07-23
	* libdisasm/machine.dat: Bug fixed in instruction bt_rm32_r32. The 4th field
		'SKIP' has been replaced by 'REG'. The Intel manual used as a reference
		had an error in the instruction format specification.
	* m2s-objdump.c: Bug fixed after 'if' statement.

